--- a/sass/_slider.scss
+++ b/sass/_slider.scss
@@ -1,9 +1,8 @@
-@import "./variables";
+@import "variables";
 
 .slider {
   max-width: $image-width;
   margin: 0 auto;
-  position: relative;
 }
 
 .slider__images-container {
@@ -11,22 +10,29 @@
   width: 100%;
   padding-bottom: $image-height-proportion;
 }
+
 .slider__image-container {
   position: absolute;
   left: 0;
   top: 0;
   height: 100%;
   overflow: hidden;
+
   img {
     top: 50%;
     transform: translateY(-50%);
     width: $image-width;
     position: absolute;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
     user-select: none;
   }
+
   &.slider__image-container--first {
     width: 100%;
   }
+
   &.slider__image-container--second {
     width: 50%;
   }
